# fakecloud

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  ROADMAP.md  codecov.yml  conformance-baseline.json  docker-compose.yml  install.sh
.cargo/: audit.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  conformance.yml  docker.yml  e2e.yml  examples.yml  moto-compat.yml  parity-aws.yml  parity-fakecloud.yml  release.yml  sdk-go.yml  sdk-java.yml  sdk-php.yml  sdk-python.yml  sdk-typescript.yml  security.yml  tfacc.yml  website.yml
aws-models/: service-map.json
crates/fakecloud-apigatewayv2/: Cargo.toml
crates/fakecloud-apigatewayv2/src/: cors.rs  http_proxy.rs  lambda_proxy.rs  mock.rs  router.rs  service.rs  state.rs
crates/fakecloud-aws/: Cargo.toml
crates/fakecloud-aws/src/: error.rs  lib.rs  sigv4.rs  xml.rs
crates/fakecloud-bedrock/: Cargo.toml
crates/fakecloud-bedrock/src/: async_invoke.rs  automated_reasoning.rs  automated_reasoning_workflows.rs  converse.rs  custom_model_deployments.rs  custom_models.rs  customization.rs  enforced_guardrails.rs  evaluation.rs  faults.rs  foundation_model_agreements.rs  guardrails.rs  inference_profiles.rs  invocation_jobs.rs  invoke.rs  lib.rs  logging.rs  marketplace.rs  model_copy.rs  model_import.rs  models.rs  prompt.rs  prompt_routers.rs  resource_policies.rs  service.rs  state.rs  streaming.rs  throughput.rs
crates/fakecloud-cloudformation/: Cargo.toml
crates/fakecloud-cloudformation/src/: resource_provisioner.rs  service.rs  state.rs  template.rs  xml_responses.rs
crates/fakecloud-cognito/: Cargo.toml
crates/fakecloud-cognito/src/: lib.rs  state.rs  triggers.rs  user_status.rs
crates/fakecloud-conformance/: Cargo.toml  README.md
crates/fakecloud-conformance-macros/: Cargo.toml
crates/fakecloud-conformance-macros/src/: lib.rs
crates/fakecloud-conformance/src/: audit.rs  checksum.rs  lib.rs  main.rs  probe.rs  report.rs  shape_validator.rs  smithy.rs
crates/fakecloud-conformance/src/generators/: boundary.rs  enum_exhaust.rs  examples.rs  mod.rs  negative.rs  optionals.rs  proptest_gen.rs
crates/fakecloud-conformance/tests/: cognito.rs  dynamodb.rs  elasticache.rs  eventbridge.rs  iam.rs  kinesis.rs  kms.rs  lambda.rs  logs.rs  rds.rs  s3.rs  scheduler.rs  ses.rs  sns.rs  sqs.rs  ssm.rs
crates/fakecloud-conformance/tests/helpers/: mod.rs
crates/fakecloud-core/: Cargo.toml
crates/fakecloud-core/src/: auth.rs  delivery.rs  dispatch.rs  lib.rs  multi_account.rs  pagination.rs  protocol.rs  query.rs  registry.rs  service.rs  tags.rs
crates/fakecloud-dynamodb/: Cargo.toml
crates/fakecloud-dynamodb/src/: service.rs  state.rs  streams.rs  ttl.rs
crates/fakecloud-e2e/: Cargo.toml
crates/fakecloud-e2e/tests/: apigatewayv2.rs  apigatewayv2_persistence.rs  bedrock.rs  bedrock_persistence.rs  cloudformation.rs  cloudformation_persistence.rs  iam.rs  (+51 more)
crates/fakecloud-elasticache/: Cargo.toml
crates/fakecloud-eventbridge/: Cargo.toml
crates/fakecloud-iam/: Cargo.toml
crates/fakecloud-kinesis/: Cargo.toml
crates/fakecloud-kms/: Cargo.toml
crates/fakecloud-lambda/: Cargo.toml
crates/fakecloud-logs/: Cargo.toml
crates/fakecloud-organizations/: Cargo.toml
crates/fakecloud-parity/: Cargo.toml
crates/fakecloud-parity/src/: lib.rs
crates/fakecloud-parity/tests/: dynamodb.rs  kms.rs  s3.rs  secretsmanager.rs  sns.rs  sqs.rs  sts.rs
crates/fakecloud-parity/tests/common/: mod.rs
crates/fakecloud-persistence/: Cargo.toml
crates/fakecloud-persistence/src/: atomic.rs  cache.rs  config.rs  key_escape.rs  lib.rs  s3.rs  snapshot.rs  version.rs  warn.rs
crates/fakecloud-rds/: Cargo.toml
crates/fakecloud-rds/src/: runtime.rs  service.rs  state.rs
crates/fakecloud-s3/: Cargo.toml
crates/fakecloud-scheduler/: Cargo.toml
crates/fakecloud-sdk/: Cargo.toml  README.md
crates/fakecloud-sdk/src/: client.rs  error.rs  types.rs
crates/fakecloud-secretsmanager/: Cargo.toml
crates/fakecloud-server/: Cargo.toml
crates/fakecloud-ses/: Cargo.toml
crates/fakecloud-sns/: Cargo.toml
crates/fakecloud-sqs/: Cargo.toml
crates/fakecloud-ssm/: Cargo.toml
crates/fakecloud-stepfunctions/: Cargo.toml
crates/fakecloud-testkit/: Cargo.toml
crates/fakecloud-testkit/src/: lib.rs
crates/fakecloud-tfacc/: Cargo.toml
crates/fakecloud-tfacc/src/: allowlist.rs  lib.rs
crates/fakecloud-tfacc/tests/: acc.rs
docs/: index.html
examples/: docker-compose.yml
examples/node/: demo.js
examples/python/: demo.py
examples/terraform/: README.md  main.tf
scripts/: coverage.sh  update-aws-models.sh
sdks/go/: README.md  apigatewayv2.go  bedrock.go  fakecloud.go  scheduler.go  types.go
sdks/java/: README.md  build.gradle.kts  settings.gradle.kts
sdks/python/: README.md  pyproject.toml
sdks/typescript/: README.md  package-lock.json  package.json
tests/compat/: README.md  boto3_compat.py  run.sh
website/sass/: style.scss
website/static/: llms-full.txt  llms.txt
website/templates/: base.html  blog.html  docs-page.html  docs-sidebar.html  docs.html  index.html
(+240 files in other folders)
