[package]
name = "fakecloud-aws"
description = "Shared AWS types for FakeCloud"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
version.workspace = true

[dependencies]
bytes = { workspace = true }
http = { workspace = true }
quick-xml = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
