[package]
name = "fakecloud-aws"
description = "Shared AWS types for FakeCloud"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
version.workspace = true

[dependencies]
bytes = { workspace = true }
chrono = { workspace = true }
hex = "0.4"
hmac = "0.12"
http = { workspace = true }
percent-encoding = { workspace = true }
quick-xml = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
subtle = "2"
thiserror = { workspace = true }
