[package]
name = "fakecloud-core"
description = "Core service traits and dispatch for FakeCloud"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
version.workspace = true

[dependencies]
fakecloud-aws = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
bytes = { workspace = true }
http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
