[package]
name = "fakecloud-rds"
description = "Amazon RDS implementation for FakeCloud"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
version.workspace = true

[dependencies]
fakecloud-core = { workspace = true }
async-trait = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
