[package]
name = "fakecloud-tfacc"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
publish = false

[dependencies]
fakecloud-testkit = { path = "../fakecloud-testkit" }

[dev-dependencies]
tokio = { workspace = true }

[[bin]]
name = "tfacc_services"
path = "src/bin/tfacc_services.rs"
